--- a/index.css
+++ b/index.css
@@ -1,22 +1,19 @@
 html, body{
     margin: 0;
     padding: 0;
-    background-color: #2aa198;
+    background-color: #2aa198 !important;
     height: 100vh;
     display: block;
+    overflow: hidden;
 }
 td{
-    margin: 0;
+    margin: 0px;
     padding: 10px;
     height: 3vh;
     width: 3vh;
-    /* border: 0.5px solid; */
+    border: 0.5px solid;
     border-color: black;
     background-color: 	#fdf6e3;
-}
-#r1, #r4, #r7{
-    border-top: 5px solid;
-    border-color: black;
 }
 table{
     /* box-shadow: 10px 10px 10px 10px; */
@@ -33,40 +30,45 @@ td:hover{
 td {
     /* height:30px;
     width:30px; */
-    border:1px solid;
+    /* border:1px solid; */
     text-align:center;
-    border-radius: 5px;
-  }
-  /* td:first-child {
-    border-left:solid;
-  } */
-  td:nth-child(3n) {
-    border-right:solid ;
-  }
-  tr:first-child {
-    border-top:solid;
-  }
-  tr:nth-child(3n) td {
-    border-bottom:solid ;
+    border-radius: 3px;
 }
+td:nth-child(3n) {
+    border-right: 3px solid;
+}
+tr:nth-child(3n) td {
+    border-bottom: 3px solid;
+}
+
 h1{
     text-align: center;
 }
 .box {
     box-shadow:
-        0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-        0 12.5px 10px rgba(0, 0, 0, 0.06),
-        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        2.8px 2.8px 2.8px 2.8px rgba(0, 0, 0, 0.034),
+        5.3px 5.3px 5.3px 5.3px rgba(0, 0, 0, 0.048),
+        12.5px 12.5px 12.5px 12.5px rgba(0, 0, 0, 0.06),
+        17.9px 17.9px 17.9px 17.9px rgba(0, 0, 0, 0.072),
+        33.4px 33.4px 33.4px 33.4px rgba(0, 0, 0, 0.086),
+        80px 80px 80px 80px rgba(0, 0, 0, 0.12),
         0 100px 80px rgba(0, 0, 0, 0.12)
     ;
   
     height: 35vw;
     width: 35vw;
+    /* margin-top: 20vh; */
     margin: 100px auto;
-    background: aquamarine;
+    background: #2eada3;
     border-radius: 15px;
     vertical-align: auto;
     padding: 10px;
-  }
+    overflow: auto;
+}
+#controls{
+    /* background-color: white; */
+    text-align: center;
+    /* position: fixed; */
+    /* top: 90%; */
+    margin: auto;
+}
