--- a/index.css
+++ b/index.css
@@ -5,7 +5,15 @@ html, body{
     height: 100vh;
     display: block;
     overflow: hidden;
+    font-family: 'Roboto', sans-serif;
 }
+
+#title{
+    padding: 20px;
+    font-size: 64px;
+    font-family: 'Fredoka One', cursive;
+}
+
 td{
     margin: 0px;
     padding: 10px;
@@ -23,6 +31,8 @@ table{
     width: 100%;
     height: 100%;
     margin: auto;
+    font-family: 'Roboto', sans-serif;
+
 }
 /* td:hover{
     background-color: white;
@@ -60,7 +70,7 @@ h1{
     min-width: 450px;
     min-height: 450px;
     /* margin-top: 20vh; */
-    margin: 100px auto;
+    margin: 50px auto;
     background: #2eada3;
     border-radius: 15px;
     vertical-align: auto;
@@ -69,8 +79,59 @@ h1{
 }
 #controls{
     /* background-color: white; */
-    text-align: center;
-    /* position: fixed; */
-    /* top: 90%; */
+    width: 25vw;
+    height: 90vh;
+    text-align: left;
+    position: fixed;
+    top: 5%;
+    left: 2%;
     margin: auto;
+    padding: 10px;
+    background: #eee8d5;
+    border-radius: 15px;
+
+    box-shadow:
+        2.8px 2.8px 2.8px 2.8px rgba(0, 0, 0, 0.034),
+        5.3px 5.3px 5.3px 5.3px rgba(0, 0, 0, 0.048),
+        12.5px 12.5px 12.5px 12.5px rgba(0, 0, 0, 0.06),
+        17.9px 17.9px 17.9px 17.9px rgba(0, 0, 0, 0.072),
+        33.4px 33.4px 33.4px 33.4px rgba(0, 0, 0, 0.086),
+        80px 80px 80px 80px rgba(0, 0, 0, 0.12),
+        0 100px 80px rgba(0, 0, 0, 0.12)
+    ;
+}
+#canvas{
+    background: #eee8d5;
+    position: fixed;
+    top: 5%;
+    right: 2%;
+    border-radius: 15px;
+
+    box-shadow:
+        2.8px 2.8px 2.8px 2.8px rgba(0, 0, 0, 0.034),
+        5.3px 5.3px 5.3px 5.3px rgba(0, 0, 0, 0.048),
+        12.5px 12.5px 12.5px 12.5px rgba(0, 0, 0, 0.06),
+        17.9px 17.9px 17.9px 17.9px rgba(0, 0, 0, 0.072),
+        33.4px 33.4px 33.4px 33.4px rgba(0, 0, 0, 0.086),
+        80px 80px 80px 80px rgba(0, 0, 0, 0.12),
+        0 100px 80px rgba(0, 0, 0, 0.12)
+    ;
+}
+
+.btn{
+    width: 100%;
+    margin-top: 10px;
+}
+a, a:visited{
+    color: #268bd2;
+}
+.btn-light{
+    color: #2eada3;
+}
+#buttons{
+    padding: 10px;
+    margin-left: -10px;
+    width: 100%;
+    position: absolute;
+    bottom: 2%;
 }
