--- a/index.css
+++ b/index.css
@@ -89,6 +89,9 @@ h1{
     padding: 10px;
     background: #eee8d5;
     border-radius: 15px;
+    /* border: #2eada3;
+    border-width: 10px;
+    border-style: solid; */
 
     box-shadow:
         2.8px 2.8px 2.8px 2.8px rgba(0, 0, 0, 0.034),
